--- a/ucomm/less/homepage.less
+++ b/ucomm/less/homepage.less
@@ -57,7 +57,7 @@
 
     .right {}
     .top {}
-    .bottom { bottom: 40px; }
+    .bottom { }
 
     h3 {
       font-size: 3.5em;
